creates list of pomodoros for different projects and tasks

--- a/designs/pomodoro.ui
+++ b/designs/pomodoro.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>517</width>
-    <height>270</height>
+    <width>661</width>
+    <height>354</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,60 +21,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_4">
-    <item row="3" column="0">
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="maximumSize">
-       <size>
-        <width>800</width>
-        <height>100</height>
-       </size>
-      </property>
-      <property name="title">
-       <string>Current Task</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_3">
-         <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;seperate with comma&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-         </property>
-         <property name="text">
-          <string>interruptions</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="le_interruption"/>
-       </item>
-       <item row="1" column="0">
-        <widget class="QProgressBar" name="pb_remaining">
-         <property name="styleSheet">
-          <string notr="true"> QProgressBar::chunk {
-     background-color: #3add36;
-     width: 1px;
- }
-
- QProgressBar {
-     border: 1px solid grey;
-     border-radius: 0px;
-     text-align: center;
- }</string>
-         </property>
-         <property name="value">
-          <number>24</number>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="lbl_status">
-         <property name="text">
-          <string>work</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox">
       <property name="maximumSize">
@@ -87,9 +33,6 @@
        <string>Start</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="6">
-        <widget class="QSpinBox" name="sb_number_of_poms"/>
-       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
@@ -97,10 +40,7 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="4">
-        <widget class="QComboBox" name="cb_task"/>
-       </item>
-       <item row="0" column="7">
+       <item row="0" column="9">
         <widget class="QPushButton" name="btn_go">
          <property name="maximumSize">
           <size>
@@ -108,13 +48,13 @@
            <height>16777215</height>
           </size>
          </property>
+         <property name="styleSheet">
+          <string notr="true">background-color: red</string>
+         </property>
          <property name="text">
           <string>go</string>
          </property>
         </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="cb_project"/>
        </item>
        <item row="0" column="3">
         <widget class="QLabel" name="label_2">
@@ -123,18 +63,8 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="cb_project"/>
        </item>
        <item row="0" column="5">
         <spacer name="horizontalSpacer_2">
@@ -149,10 +79,73 @@
          </property>
         </spacer>
        </item>
+       <item row="0" column="2">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="6">
+        <widget class="QSpinBox" name="sb_number_of_poms"/>
+       </item>
+       <item row="0" column="4">
+        <widget class="QComboBox" name="cb_task"/>
+       </item>
+       <item row="0" column="7">
+        <widget class="QPushButton" name="btn_add">
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>add</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="8">
+        <widget class="QPushButton" name="btn_clear">
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>clear</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
-    <item row="2" column="0">
+    <item row="0" column="1" rowspan="2">
+     <widget class="QGroupBox" name="groupBox_6">
+      <property name="title">
+       <string>Stack</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_7">
+       <item row="0" column="0">
+        <widget class="QListWidget" name="listWidget"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
      <widget class="QGroupBox" name="groupBox_3">
       <property name="maximumSize">
        <size>
@@ -220,6 +213,60 @@
       </layout>
      </widget>
     </item>
+    <item row="2" column="0">
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="maximumSize">
+       <size>
+        <width>800</width>
+        <height>100</height>
+       </size>
+      </property>
+      <property name="title">
+       <string>Current Task</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_3">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;seperate with comma&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>interruptions</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="le_interruption"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QProgressBar" name="pb_remaining">
+         <property name="styleSheet">
+          <string notr="true"> QProgressBar::chunk {
+     background-color: #3add36;
+     width: 1px;
+ }
+
+ QProgressBar {
+     border: 1px solid grey;
+     border-radius: 0px;
+     text-align: center;
+ }</string>
+         </property>
+         <property name="value">
+          <number>24</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbl_status">
+         <property name="text">
+          <string>work</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -245,12 +292,12 @@
    <slot>setFocus()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>192</x>
-     <y>130</y>
+     <x>188</x>
+     <y>146</y>
     </hint>
     <hint type="destinationlabel">
-     <x>382</x>
-     <y>132</y>
+     <x>404</x>
+     <y>148</y>
     </hint>
    </hints>
   </connection>
@@ -261,12 +308,12 @@
    <slot>click()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>414</x>
-     <y>130</y>
+     <x>404</x>
+     <y>148</y>
     </hint>
     <hint type="destinationlabel">
-     <x>474</x>
-     <y>127</y>
+     <x>450</x>
+     <y>146</y>
     </hint>
    </hints>
   </connection>
@@ -277,12 +324,12 @@
    <slot>click()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>60</x>
-     <y>130</y>
+     <x>89</x>
+     <y>148</y>
     </hint>
     <hint type="destinationlabel">
-     <x>177</x>
-     <y>123</y>
+     <x>188</x>
+     <y>146</y>
     </hint>
    </hints>
   </connection>
@@ -293,12 +340,28 @@
    <slot>setFocus()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>486</x>
-     <y>125</y>
+     <x>450</x>
+     <y>146</y>
     </hint>
     <hint type="destinationlabel">
-     <x>427</x>
-     <y>47</y>
+     <x>319</x>
+     <y>52</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btn_clear</sender>
+   <signal>clicked()</signal>
+   <receiver>listWidget</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>402</x>
+     <y>46</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>550</x>
+     <y>75</y>
     </hint>
    </hints>
   </connection>
